fix: overflow of content

--- a/src/components/Note/Note.css
+++ b/src/components/Note/Note.css
@@ -10,11 +10,11 @@
 }
 
 .note > p {
-  overflow-wrap: break-word;
-  -webkit-line-clamp: 2;
-  text-overflow: ellipsis;
-  -webkit-box-orient: vertical;
   overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
 
 .pin-btn {
